# wuji-retargeting

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  README.zh.md  pyproject.toml  requirements.txt
.github/workflows/: auto-release.yml  create_release_tag.yaml
docs/: new-device-integration.md  wuji-tuning-guide.md
example/: calibrate_offset.py  teleop_real.py  teleop_sim.py  tuning_tool.py
example/config/: adaptive_analytical_avp.yaml  adaptive_analytical_manus.yaml  adaptive_analytical_video.yaml  adaptive_analytical_wuji_glove_left.yaml  adaptive_analytical_wuji_glove_right.yaml  adaptive_analytical_wuji_glove_wh120_left.yaml  adaptive_analytical_wuji_glove_wh120_right.yaml  adaptive_analytical_wuji_glove_wuji_hand_2_left.yaml  adaptive_analytical_wuji_glove_wuji_hand_2_right.yaml  retarget_manus_left.yaml  retarget_manus_right.yaml  tuning_viz.yaml
example/config/vector/: vector_avp.yaml  vector_manus_left.yaml  vector_manus_right.yaml  vector_video.yaml
example/data/: .gitignore  avp1.pkl  zhuliang.pkl
example/input_devices/: __init__.py  base.py  input_data_replay.py  mediapipe_replay.py  realsense_mediapipe.py  video_mediapipe.py  visionpro.py  visionpro_replay.py  wuji_glove_device.py  zed_mediapipe.py
example/utils/: __init__.py  avp_utils.py  config_paths.py  mujoco_vis.py
example/utils/mujoco-sim/: .gitignore  README.md  requirements.txt  run_sim.py
example/viz/: config_watcher.py  param_map.py  skeleton_drawer.py  tuning_viewer.py
wuji_retargeting/: __init__.py  mediapipe.py  opt.py  retarget.py  robot.py
wuji_retargeting/meshes/left/: finger1_link1.STL  finger1_link2.STL  finger1_link3.STL  finger1_link4.STL  finger1_tip_link.STL  finger2_link1.STL  finger2_link2.STL  finger2_link3.STL  finger2_link4.STL  finger2_tip_link.STL  finger3_link1.STL  finger3_link2.STL  finger3_link3.STL  finger3_link4.STL  finger3_tip_link.STL  finger4_link1.STL  finger4_link2.STL  finger4_link3.STL  finger4_link4.STL  finger4_tip_link.STL  finger5_link1.STL  finger5_link2.STL  finger5_link3.STL  finger5_link4.STL  finger5_tip_link.STL  palm_link.STL
wuji_retargeting/meshes/right/: finger1_link1.STL  finger1_link2.STL  finger1_link3.STL  finger1_link4.STL  finger1_tip_link.STL  finger2_link1.STL  finger2_link2.STL  finger2_link3.STL  finger2_link4.STL  finger2_tip_link.STL  finger3_link1.STL  finger3_link2.STL  finger3_link3.STL  finger3_link4.STL  finger3_tip_link.STL  finger4_link1.STL  finger4_link2.STL  finger4_link3.STL  finger4_link4.STL  finger4_tip_link.STL  finger5_link1.STL  (+5 more)
wuji_retargeting/opt/: __init__.py  adaptive_analytical.py  adaptive_qp.py  base.py  tip_dir_vec.py  tip_dir_vec_analytical.py  tip_dir_vec_qp.py  vector.py
wuji_retargeting/urdf/: left.urdf  left_aux.urdf  right.urdf  right_aux.urdf
wuji_retargeting/viz/: __init__.py  config_watcher.py  hud.py  param_map.py  skeleton_drawer.py  tuning_viewer.py
(+5 files in other folders)
